test/libsolidity/syntaxTests/constants/constant_natspec_user.sol
/// Documentation
uint constant x = 8;
// ----
// DocstringParsingError 6546: (0-18): Documentation tag @notice not valid for non-public state variables.
